--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_modular: ^5.0.3
   google_fonts: ^5.0.0
   json_annotation: ^4.8.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   build_runner: ^2.4.5
