--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_modular: ^5.0.3
   google_fonts: ^5.0.0
+  http: ^1.1.0
   json_annotation: ^4.8.1
   uuid: ^3.0.7
 
