--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^5.0.0
   http: ^1.1.0
   json_annotation: ^4.8.1
+  path: ^1.8.3
+  sqflite: ^2.2.8+4
   uuid: ^3.0.7
 
 dev_dependencies:
